fixed z-index burger menu

--- a/src/components/Home/HomeHeader/HomeHeader.styles.scss
+++ b/src/components/Home/HomeHeader/HomeHeader.styles.scss
@@ -41,7 +41,6 @@
   color: var(--white);
   width: 265px;
   position: absolute;
-  z-index: 9;
   top: 47%;
   left: 5%;
   font-size: 23px;
@@ -64,7 +63,6 @@
   color: var(--white);
   width: 265px;
   position: absolute;
-  z-index: 9;
   top: 47%;
   left: 5%;
   font-size: 23px;
