--- a/src/components/Home/VideoHeader/VideoHeader.style.scss
+++ b/src/components/Home/VideoHeader/VideoHeader.style.scss
@@ -7,16 +7,16 @@
     left: -50vw;
 }
 
-::-webkit-scrollbar {
-  display: none;
- }
+// ::-webkit-scrollbar {
+//   display: none;
+//  }
 .player-video{
   position: absolute;
   top: 40vh;
   left: 55vw;
-  z-index: 2;
   display: flex;
   align-items: center;
+  cursor: pointer;
 
   .play-icon{
     width: 0; 
@@ -59,15 +59,15 @@
 }
 
 @media (min-width: 1024px) {
+
+}
+
+@media (min-width: 1280px) {
   .video-header{
     width: 100vw;
     height: auto;
 
   }
-}
-
-@media (min-width: 1280px) {
-
 }
 
 @media (min-width: 1440px) {
